attached_assets/Pasted-2025-05-28T04-06-58Z-info-Deployment-86391ddc-c684-4527-976b-e2e3917650ce-2025-05-28T04-06-58Z-inf-1748405523361.txt
2025-05-28T04:06:58Z info: Deployment: 86391ddc-c684-4527-976b-e2e3917650ce
2025-05-28T04:06:58Z info: Connecting to builder
2025-05-28T04:07:02Z info: Builder connected
2025-05-28T04:07:02Z info: Installing packages
--> npm install


added 46 packages, removed 15 packages, changed 8 packages, and audited 827 packages in 23s

109 packages are looking for funding
  run `npm fund` for details


20 vulnerabilities (1 low, 4 moderate, 15 high)

To address issues that do not require attention, run:
  npm audit fix

To address all issues (including breaking changes), run:
  npm audit fix --force

Run `npm audit` for details.

npm notice
npm notice New major version of npm available! 10.8.2 -> 11.4.1
npm notice Changelog: https://github.com/npm/cli/releases/tag/v11.4.1
npm notice To update run: npm install -g npm@11.4.1
npm notice

2025-05-28T04:07:25Z info: Starting Build

> vite_react_shadcn_ts@0.0.0 build
> vite build


NODE_ENV=production is not supported in the .env file. Only NODE_ENV=development is supported to create a development build of your project. If you need to set process.env.NODE_ENV, you can set it in the Vite config instead.

vite v5.4.10 building for production...

transforming...

Browserslist: browsers data (caniuse-lite) is 7 months old. Please run:
  npx update-browserslist-db@latest
  Why you should do it regularly: https://github.com/browserslist/update-db#readme

node_modules/bluebird/js/release/util.js (165:2): Use of eval in "node_modules/bluebird/js/release/util.js" is strongly discouraged as it poses security risks and may cause issues with minification.

✓ 4267 modules transformed.

rendering chunks...

computing gzip size...

dist/index.html                     0.67 kB │ gzip:   0.39 kB

✓ built in 16.10s

Environment variables loaded from .env

Prisma schema loaded from prisma/schema.prisma


✔ Generated Prisma Client (v6.8.2) to ./node_modules/@prisma/client in 152ms

Start by importing your Prisma Client (See: https://pris.ly/d/importing-client)

Tip: Need your database queries to be 1000x faster? Accelerate offers you that and more: https://pris.ly/tip-2-accelerate


Environment variables loaded from .env

Prisma schema loaded from prisma/schema.prisma

Datasource "db": PostgreSQL database "neondb", schema "public" at "ep-weathered-band-a64zfol1.us-west-2.aws.neon.tech"


The database is already in sync with the Prisma schema.

Running generate... (Use --skip-generate to skip the generators)
Running generate... - Prisma Client
✔ Generated Prisma Client (v6.8.2) to ./node_modules/@prisma/client in 165ms

2025-05-28T04:07:56Z info: Pushing pid1 binary layer...
2025-05-28T04:07:57Z info: Pushing hosting layer...
2025-05-28T04:07:57Z info: Retrieved cached nix layer
2025-05-28T04:07:57Z info: Created hosting layer
2025-05-28T04:07:58Z info: Created pid1 binary layer
2025-05-28T04:08:34Z info: Created Repl layer
2025-05-28T04:08:35Z info: Pushed image manifest
2025-05-28T04:08:35Z info: Pushed soci index manifest
2025-05-28T04:08:39Z info: Creating Autoscale service
forwarding local port 8080 to external port 80 (mapped as 1104)
npm warn exec The following package was not found and will be installed: tsx@4.19.4
starting up user application

    at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
SyntaxError: The requested module '../middleware/validation' does not provide an export named 'validateRequest'

import { validateRequest } from '../middleware/validation';
/home/runner/workspace/src/server/routes/events.ts:10

SyntaxError: The requested module '../middleware/validation' does not provide an export named 'validateRequest'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
/home/runner/workspace/src/server/routes/events.ts:10
         ^
import { validateRequest } from '../middleware/validation';
    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
Node.js v20.18.1
command finished with error [sh -c NODE_ENV=production PORT=8080 npx tsx src/server/index.ts]: exit status 1
         ^
    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)

    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
crash loop detected
2025-05-28T04:11:17Z error: The deployment is crash looping. This can happen if the run command fails or exits immediately after starting. Check the logs for more information.